test/conformance/chainsaw/deleting-policies/cel-lib/resource-lib.yaml/configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: clusterregistries
  namespace: default
data:
  registries: "enabled"
