test/conformance/chainsaw/deleting-policies/cel-lib/resource-lib.yaml/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: example
  namespace: default
spec:
  containers:
    - name: example
      image: public.ecr.aws/docker/library/nginx:latest
