test/conformance/chainsaw/deleting-policies/cel-lib/resource-lib.yaml/policy.yaml
apiVersion: policies.kyverno.io/v1beta1
kind: DeletingPolicy
metadata:
  name: dpol-resource-lib-check
spec:
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
  conditions:
    - name: check-cm-value
      expression: >-
        resource.get("v1", "configmaps", "default", "clusterregistries").data["registries"] == "enabled"
  schedule: "*/1 * * * *"
