test/conformance/chainsaw/deleting-policies/cel-lib/resource-lib.yaml/pod-assert.yaml
apiVersion: v1
kind: Pod
metadata:
  name: example
  namespace: default
